# casm

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  casm.cpp  casm_common.cpp  casm_consts.cpp  casm_settings.ini  cout_colors.cpp  test  test.cpp
pre_builds/: README.md  casm_linux_x86_64_1.3.0  casm_linux_x86_64_1.3.1
src/: casm_consts.hpp  casm_msgs.cpp  col_cout.hpp  compile.hpp  compile_lang.cpp  config.hpp  file_stuffs.hpp  heavy_profile.hpp  main.cpp  settings.hpp  test.cpp
src/ini_reader/: ini_reader.cpp  ini_reader.hpp
